[api] feat: gallery image feature
